--- a/index.html
+++ b/index.html
@@ -3,4 +3,14 @@
     <head>
         <title>Pagina ejemplo</title>
     </head>
+    <body>
+        <div>
+            <h1>
+                Hola perros, este es un proyecto de 10.
+            </h1>
+            <h2>
+                Les recuerdo que nada.
+            </h2>
+        </div>
+    </body>
 </html>
